# sat_test

./: .gitignore  8-queens.sat  Cargo.toml  Makefile  result.txt
src/: main.rs
